Increase Calendly widget height to prevent scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ body {
 .calendly-inline-widget {
   min-width: 320px;
   width: 100%;
-  height: 660px;
+  height: 750px;
   border-radius: 1rem;
   overflow: hidden;
 }
